@@ -279,25 +279,38 @@ AdvancedCCMImpl.prototype =
 
         // check result variables
         var resvars = func_info.result;
-        var rescount = Object.keys( resvars ).length;
+        var result = rsp.r;
 
-        // NOTE: by forward compatibility and inheritance requirements, unknown result variables are allowed
-        for ( var k in rsp.r )
+        if ( typeof resvars === 'string' )
         {
-            if ( resvars.hasOwnProperty( k ) )
+            // New feature since FTN3 1.7
+            if ( !SpecTools.checkType( info, resvars, result ) )
             {
-                SpecTools.checkResultType( as, info, name, k, rsp.r[ k ] );
-                --rescount;
+                as.error( FutoInError.InternalError, "Result type mismatch" );
+            }
+        }
+        else
+        {
+            var rescount = Object.keys( resvars ).length;
+
+            // NOTE: by forward compatibility and inheritance requirements, unknown result variables are allowed
+            for ( var k in result )
+            {
+                if ( resvars.hasOwnProperty( k ) )
+                {
+                    SpecTools.checkResultType( as, info, name, k, result[ k ] );
+                    --rescount;
+                }
+            }
+
+            if ( rescount > 0 )
+            {
+                as.error( FutoInError.InternalError, "Missing result variables" );
             }
         }
 
-        if ( rescount > 0 )
-        {
-            as.error( FutoInError.InternalError, "Missing result variables" );
-        }
-
         // Success
-        as.success( rsp.r );
+        as.success( result );
     },
 
     onDataResponse : function( as, ctx, rsp )
