@@ -16,7 +16,7 @@ Reference implementation of:
     Version: 1.5
     
     FTN3: FutoIn Interface Definition
-    Version: 1.6
+    Version: 1.7
 
     FTN5: FutoIn HTTP integration
     Version: 1.2
