@@ -1,4 +1,7 @@
 
+=== (next) ===
+NEW: FTN3 v1.7 custom result types
+
 === 1.2.2 (2017-08-06) ===
 FIXED: not populated module.exports in repeated browser require()
 FIXED: returned browser globals documentation
